<resources>
    <string name="app_name">Power</string>
    <string name="action_logout">登出</string>
    <string name="drawer_item_log">登陆</string>
    <string name="drawer_item_collect">收藏</string>
    <string name="drawer_item_discover">发现</string>
    <string name="drawer_item_sun">白天</string>
    <string name="drawer_item_night">夜间</string>
    <string name="drawer_item_settings">设置</string>
    <string name="drawer_item_finish">退出</string>
    <string name="drawer_item_about">关于</string>
    <string name="user_name">Power</string>
    <string name="content_text">巴拉拉拉拉有一天，我碰到一个姑娘，我就知道我会喜欢上她，结果我真的就喜欢上她了。巴拉拉拉拉有一天，我碰到一个姑娘，我就知道我会喜欢上她，结果我真的就喜欢上她了。巴拉拉拉拉有一天，我碰到一个姑娘，我就知道我会喜欢上她，结果我真的就喜欢上她了。巴拉拉拉拉有一天，我碰到一个姑娘，我就知道我会喜欢上她，结果我真的就喜欢上她了。巴拉拉拉拉有一天，我碰到一个姑娘，我就知道我会喜欢上她，结果我真的就喜欢上她了。巴拉拉拉拉有一天，我碰到一个姑娘，我就知道我会喜欢上她，结果我真的就喜欢上她了。巴拉拉拉拉有一天，我碰到一个姑娘，我就知道我会喜欢上她，结果我真的就喜欢上她了。巴拉拉拉拉有一天，我碰到一个姑娘，我就知道我会喜欢上她，结果我真的就喜欢上她了。巴拉拉拉拉有一天，我碰到一个姑娘，我就知道我会喜欢上她，结果我真的就喜欢上她了。巴拉拉拉拉有一天，我碰到一个姑娘，我就知道我会喜欢上她，结果我真的就喜欢上她了。巴拉拉拉拉有一天，我碰到一个姑娘，我就知道我会喜欢上她，结果我真的就喜欢上她了。巴拉拉拉拉有一天，我碰到一个姑娘，我就知道我会喜欢上她，结果我真的就喜欢上她了。巴拉拉拉拉有一天，我碰到一个姑娘，我就知道我会喜欢上她，结果我真的就喜欢上她了。巴拉拉拉拉</string>
    <string name="card_date">2015.03.27</string>
    <string name="card_share">分享</string>
    <string name="card_collect">收藏</string>
    <string name="card_like">赞</string>
    <string name="card_content_author">佚名</string>
    <string name="no_data">数据错误</string>
    <string name="card_content">内容</string>
    <string name="my_cancel">取消</string>
    <string name="card_collected">已收藏</string>
    <string name="card_liked">已赞</string>
    <string name="click_to_exit">再按一次退出程序</string>
    <string name="update">检查更新</string>
    <string name="contribute">投稿:370940332@qq.com</string>
    <string name="developer">Powered by kaming</string>
    <string name="feedback">反馈:370940332@qq.com</string>
    <string name="nightMode">夜间模式</string>
    <string name="collected">加入收藏夹</string>
    <string name="cancel_collect">取消收藏</string>
    <string name="app_version">version:</string>
    <string name="summary_nightMode">切换为黑色主题\n(默认为白色)</string>
    <string name="wifiMode">自动更新</string>
    <string name="summary_wifiMode">Wifi下自动更新</string>
    <string name="pushMode">消息推送</string>
    <string name="summary_pushMode">提醒最新更新(默认开启)</string>
    <string name="gradeMode">为我评分</string>
    <string name="summary_gradeMode">thanks</string>
    <string name="cleanMode">清除缓存</string>
    <string name="duang">duang</string>
    <string name="biubiu">biubiu</string>
    <string name="feedbackMode">意见反馈</string>
    <string name="summary_feedbackMode">反馈有钱拿</string>
    <string name="boom">boom</string>
    <string name="artMode">文艺模式</string>
    <string name="summary_artMode">切换国际范</string>
    <string name="cacheSize">当前缓存:</string>
    <string name="cleanSuccess">清理干净</string>
    <string name="noMarket">处理出错</string>
    <string name="noFavorites">收藏夹空空如也</string>
    <string name="delete">删除</string>
    <string name="power">PICK \nA \nFIGHT</string>
    <string name="noNet">网络异常</string>
    <string name="noUpdate">版本无更新</string>
    <string name="longdel">长按选项删除</string>
    <string name="error">异常错误</string>
    <string name="protectEye">眼保健操揉揉揉</string>
    <string name="action_login">登陆</string>
    <string name="login_ok">登陆成功</string>
    <string name="please_login">请先登录</string>
    <string name="developering">工程师在抓紧开发中...</string>
    <string name="visitor">游客</string>
    <string name="add_comment">添加评论</string>
    <string name="write_comment">写评论...</string>
    <string name="comment">评论</string>
    <string name="no_name">匿名评论</string>
    <string name="noname">匿名</string>
    <string name="comment_ok">评论成功</string>
    <string name="comment_empty">请输入评论...</string>
    <string name="waitingToTry">异常错误 请稍后再试...</string>
    <string name="number">用户名</string>
    <string name="passwd">密码</string>
    <string name="agin_passwd">确认密码</string>
    <string name="from_power">(来自Power客户端)</string>
    <string name="not_network">没有网络</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="empty_username">用户名不能为空</string>
    <string name="empty_password">密码不能为空</string>
    <string name="two_not_match_password">两次输入的密码不匹配</string>
    <string name="register_successfully">注册成功</string>
    <string name="exists_username">已存在用户名</string>
    <string name="registing">正在提交...</string>
    <string name="go_to">goto</string>
</resources>
