<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/icon"
            android:src="@drawable/about_icon"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/appname"
            android:layout_below="@id/icon"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/md_black_1000"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="@dimen/appname_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/developer"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textColor="@color/md_black_1000"
            android:text="@string/developer"
            android:textSize="@dimen/contribute_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/connection"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/contribute"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textColor="@color/md_black_1000"
                android:textSize="@dimen/contribute_size"
                android:text="@string/contribute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <com.gc.materialdesign.views.ButtonRectangle
            android:layout_gravity="center_horizontal"
            android:id="@+id/update"
            android:layout_height="40dp"
            android:layout_width="wrap_content"
            android:textSize="@dimen/contribute_size"
            android:background="#1E88E5"
            android:textStyle="italic"
            android:text="@string/update" />



        </LinearLayout>


</RelativeLayout>