<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/main_header" android:id="@+id/toolbar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/app_name"
        android:textColor="@color/style_color_accent"
        android:textSize="80dp" />

    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/username"
            android:drawableLeft="@drawable/ic_person_grey600_24dp"
            android:drawablePadding="5dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/password"
            android:drawableLeft="@drawable/ic_vpn_key_grey600_24dp"
            android:drawablePadding="5dp"
            android:inputType="textPassword"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:onClick="register"
                android:textSize="@dimen/text_18"
                style="?attr/buttonBarButtonStyle"
                android:text="@string/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:onClick="login"
                android:layout_marginLeft="@dimen/margin_left"
                android:textSize="@dimen/text_18"
                android:textColor="@color/white"
                android:background="@color/style_color_primary"
                android:text="@string/login"
                android:layout_width="wrap_content"
                android:layout_height="30dp" />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>