<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card="http://schemas.android.com/apk/res-auto"
    android:descendantFocusability="afterDescendants"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/cardview"
        card:cardCornerRadius="4dp"
        card:cardMaxElevation="10dp"
        card:cardElevation="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/card_margin"
        android:layout_marginRight="@dimen/card_margin">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/card_header"
                android:layout_width="match_parent"
                android:layout_height="@dimen/card_header_size">

                <ImageView
                    android:scaleType="fitXY"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/card_img"
                    android:layout_alignParentTop="true" />

                <TextView
                    android:layout_marginLeft="@dimen/card_date_left"
                    android:id="@+id/card_date"
                    android:text="@string/card_date"
                    android:textStyle="bold"
                    android:textColor="@color/md_white_1000"
                    android:textSize="@dimen/card_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </FrameLayout>

            <TextView
                android:maxLines="3"
                android:layout_below="@+id/card_header"
                android:id="@+id/card_content"
                android:textColor="@color/md_black_1000"
                android:textSize="@dimen/card_content_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_below="@id/card_content"
                android:id="@+id/author"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_weight="18"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/card_author"
                    android:textColor="@color/md_black_1000"
                    android:textSize="@dimen/card_content_author_size"
                    android:text="@string/card_content_author"
                    android:gravity="left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_below="@+id/author"
                android:id="@+id/card_footer"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.gc.materialdesign.views.ButtonFlat
                    android:layout_weight="1"
                    android:id="@+id/card_share"
                    android:textSize="@dimen/card_btn_size"
                    android:textColor="@color/md_black_1000"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="#1E88E5"
                    android:text="@string/card_share" />

                <com.gc.materialdesign.views.ButtonFlat
                    android:layout_weight="1"
                    android:id="@+id/card_collect"
                    android:textSize="@dimen/card_btn_size"
                    android:textColor="@color/md_black_1000"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="#1E88E5"
                    android:text="@string/card_collect" />

                <com.gc.materialdesign.views.ButtonFlat
                    android:layout_weight="1"
                    android:id="@+id/card_like"
                    android:textSize="@dimen/card_btn_size"
                    android:textColor="@color/md_black_1000"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="#1E88E5"
                    android:text="@string/card_like" />

            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>


</RelativeLayout>